# notes-agent

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  set_webhook.py
notes_pipeline/: __init__.py  agent.py  mcp_client.py
notes_pipeline/subagents/publisher/: agent.py
notes_pipeline/subagents/researcher/: agent.py
notes_pipeline/subagents/writer/: __init__.py  agent.py
orchestrator/: agent.py  schema.py
orchestrator/audio/: agent.py
orchestrator/publisher/: agent.py
orchestrator/researcher/: agent.py
orchestrator/utils/: resilience.py
orchestrator/vision/: agent.py
orchestrator/writer/: agent.py
